This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
11/30/23: SEM_4-1-0beta26
11/30/23: Fixed saving of frame mdoc for multishots with early returns.

11/30/23: DE code and DLL updated to work with 2.7 server; API 2 can now be
used with 2.7 but not earlier servers and gives fast continuous mode.

11/30/23: Made TakeUnbinnedIfSavingEER be on by default.

11/30/23: Stopped updating log file on each tilt during batch tilt series.

11/30/23: Added script command to report last shift in shift to marker and
allowed acquire to be turned off for current Navigator item when acquiring.

11/30/23: Made an error writing to log file during a script, tilt series, or
Navigator Acquire put warning in log instead of throwing an error.

11/30/23: Fixed problem converting beam calibrations between aperture sizes to
that made dose calibration say beam was not in calibrated range (In 4.0).

11/15/23: Fixed unreasonable timeout after a COM error moving stage.

11/15/23: Added script command to open a dialog, currently just multishot.

11/14/23: Added script command to find a substring in a string and expanded
TrimString to take an index.

11/14/23: Added option to Tilt Series Extra Output to make a map from a
low-tilt Record for each series run from Acquire at Items.

11/14/23: Fixed Z values of aligned piece coordinates and numbering of
MontSection sections in .mdoc after reordering a bidirectional tilt series.

11/11/23: Made Realign to Item skip an LM map if point was marked on an MMM
map that is acceptable but does not have desired margin to edges.

11/11/23: Changed List Mags routine for FEI STEM to avoid having to confirm a
dialog after each step, and to report the transitions out of LM.
