@@ -73,8 +73,8 @@ CScopeStatusDlg::CScopeStatusDlg(CWnd* pParent /*=NULL*/)
   mFloatingMeterSmoothed = 0;
   mSmootherThreshold1 = 0.007f;
   mSmootherThreshold2 = 0.0035f;
-  mMeterPlace.rcNormalPosition.right = 0;
-  mDosePlace.rcNormalPosition.right = 0;
+  mMeterPlace.rcNormalPosition.right = NO_PLACEMENT;
+  mDosePlace.rcNormalPosition.right = NO_PLACEMENT;
   mFullCumDose = 0.;
   mWatchDose = false;
   mEnabledSpecCam = true;
